Update README with comprehensive project documentation